# podd

./: .env.example  .gitignore  BACKEND_TODO.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  test_imports.py  test_insights_full.py  test_sarvam_voice.py  tsconfig.json  verify_imports.py  verify_phase2.py
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/0bruno/: README.md
backend/0bruno/Alarms/: Create Alarm.bru  Delete Alarm.bru  Get Alarms.bru  Get Notifications.bru  Mark Notification Read.bru  Update Alarm.bru
backend/0bruno/Appointments/: Create Appointment.bru  Delete Appointment.bru  Update Appointment.bru
backend/0bruno/Auth/: Get Current User.bru  Login.bru  Logout.bru  Refresh.bru  Register.bru
backend/0bruno/Chat/: Chat.bru  Get Chat History.bru
backend/0bruno/Emergency/: Create Emergency Contact.bru  Delete Emergency Contact.bru  Get Emergency Contacts.bru  Update Emergency Contact.bru
backend/0bruno/Health/: Create Food Log.bru  Create Vitals.bru  Get Food Logs.bru  Get Insights.bru  Get Recommendations.bru  Get Vitals.bru
backend/0bruno/Medication/: Create Medication Log.bru  Create Medication Schedule.bru  Create Medication.bru  Get Medication Schedule.bru  Get Medications.bru  README.md
backend/0bruno/Profile/: Get Profile.bru  (+1 more)
backend/app/: config.py  database.py  main.py
backend/docs/: README.md  api_documentation.md  architecture.md  database_schema.md  quick_reference.md
backend/podd_env/: pyvenv.cfg
backend/src/: README.md  config.py  database.py  main.py
backend/tests/: README.md  conftest.py  test_auth.py  test_food_log.py  test_medication.py  test_medication_schedule.py  test_profile.py  test_vitals.py
(+500 files in other folders)
